fixed error in Requirement class